--- a/frontend/PopCafe/react-files/package.json
+++ b/frontend/PopCafe/react-files/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@mui/material": "^5.11.1",
     "@mui/styled-engine-sc": "^5.11.0",
-    "next": "13.0.6",
+    "@remix-run/router": "^1.6.2",
+    "date-fns": "^2.30.0",
+    "next": "^13.4.4",
     "react": "18.2.0",
     "react-countup": "^6.4.0",
-    "react-datepicker": "^4.8.0",
+    "react-date-picker": "^10.2.0",
+    "react-datepicker": "^4.12.0",
     "react-dom": "18.2.0",
     "react-modal-video": "^2.0.0",
     "react-paginate": "^8.1.4",
+    "react-router-dom": "^6.11.2",
     "styled-components": "^5.3.6",
     "swiper": "^8.4.5",
     "yet-another-react-lightbox": "^2.2.5"
