--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "helmet": "^7.0.0",
         "hpp": "^0.2.3",
         "jsonwebtoken": "^9.0.0",
+        "moment": "^2.29.4",
         "mongodb": "^5.5.0",
         "mongoose": "^7.1.1",
         "xss-clean": "^0.1.4"
