--- a/frontend/PopCafe/react-files/package.json
+++ b/frontend/PopCafe/react-files/package.json
@@ -22,8 +22,10 @@
         "react-dom": "18.2.0",
         "react-modal-video": "^2.0.0",
         "react-paginate": "^8.1.4",
+        "react-phone-number-input": "^3.2.23",
         "react-router-dom": "^6.11.2",
         "react-time-picker": "^6.2.0",
+        "react-toastify": "^9.1.3",
         "styled-components": "^5.3.6",
         "swiper": "^8.4.5",
         "yet-another-react-lightbox": "^2.2.5"
