--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
         "moment": "^2.29.4",
         "mongodb": "^5.5.0",
         "mongoose": "^7.1.1",
+        "node-cron": "^3.0.2",
         "xss-clean": "^0.1.4"
     },
     "devDependencies": {
