--- a/frontend/PopCafe/react-files/package.json
+++ b/frontend/PopCafe/react-files/package.json
@@ -15,6 +15,7 @@
         "date-fns": "^2.30.0",
         "dompurify": "^3.0.3",
         "next": "^13.4.4",
+        "nodemailer": "^6.9.3",
         "react": "18.2.0",
         "react-countup": "^6.4.0",
         "react-date-picker": "^10.2.0",
