--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
         "mongodb": "^5.5.0",
         "mongoose": "^7.1.1",
         "node-cron": "^3.0.2",
+        "nodemailer": "^6.9.3",
         "xss-clean": "^0.1.4"
     },
     "devDependencies": {
